fixed div/naming/spacing/size issues

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,8 +1,8 @@
-#h1{
+#foot-header{
     font-style: "Quicksand";
     font-size: 64px;
     text-align: center;
-    margin-top: 0;
+    margin: 0 0 0 0;
     color: #000000;
 }
 
@@ -15,15 +15,15 @@
 }
 
 .icon{
-    margin-left: 2.3rem;
-    margin-right: 2.3rem;
+    display: inline-block;
+    margin: 2.5rem;
 }
 
 img{
-    width: 7.8rem;
-    height: 7.8rem;
+    width: 5rem;
+    height: 5rem;
 }
 
 #footer{
-    margin: 0rem 0rem 3rem 0rem;
+    margin: 0rem 0rem 2rem 0rem;
 }
